Add swagger model as an exception for uuid
