# model/swagger/user_by_id_response_swagger.go
@@ -1,0 +1,5 @@
+package swagger
+
+type UserByIDResponseSwagger struct {
+	User *UserSwagger `json:"user"`
+}
